--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="container bg-success p-5 mt-5">
+  <div class="container bg-success p-5">
     <h3 class="text-center pt-2 pb-4 text-warning">Currency converter Money Gramm</h3>
 
     <div class="row row-cols-2 d-flex justify-content-center">
